# wtools

./: .clang-format  .gitignore  App.pro  CMakeLists.txt  README.md  clang-format.bat  clang-format.sh
app/: .gitignore  App.pro  clang-format.bat
app/src/DynamicDesktop/: DynamicDesktop.pro  desktop.cpp  func_header.cpp  glwidget.cpp  glwidget.h  watermarks.h  windows_platform.cpp  windows_platform.h
app/src/DynamicDesktop/RotatingAlbums/: graphicspixmap.cpp  graphicspixmap.h  graphicsview.cpp  rotatingalbums.cpp  rotatingalbums.h
app/src/DynamicDesktop/resource/bgs/: bgs.qrc
app/src/DynamicDesktop/resource/img/: img.qrc
app/src/ScreenShot/: ScreenShot.pro  Tool.h  drawcontent.cpp  drawcontent.h  grab_desktop.h  main.cpp  screenshots.cpp  screenshots.h  selectshotarea.h
app/src/ScreenShot/img/: icon.qrc
app/src/ToolKitEntry/: CallExternal.h  ToolKitEntry.pro  main.cpp  qrc.qrc  systemtray.cpp
app/src/ToolKitEntry/setting/: SettingWidget.cpp
app/src/script/encoding/: encoding.cpp  utf8_2_utf8bom.cpp  utf8_2_utf8bom.pro
app/src/third/QHotkey/: QHotkey.pri  qhotkey.cpp  qhotkey.h  qhotkey_mac.cpp  qhotkey_p.h  qhotkey_win.cpp  qhotkey_x11.cpp
app/src/utils/: instance_header.h  logger.hpp  utils.pri  wtool.cpp  wtool.h
app/src/utils/win/: dump_helper.cpp  dump_helper.h
debian/: changelog  control
files/: Opacity.py  rss-bilibili.go  wtools.desktop
src/DynamicDesktop/: AppMsg.h  DynamicDesktop.pro  ImagePathnameManager.h  desktop.cpp  desktop.h  func_header.h  glwidget.cpp  img.qrc  main.cpp  windows_platform.cpp  windows_platform.h
src/DynamicDesktop/RotatingAlbums/: graphicsview.h  rotatingalbums.cpp  rotatingalbums.h
src/ScreenShot/: ScreenShot.pro  main.cpp  screenshots.cpp  screenshots.h  selectshotarea.cpp
src/ToolKitEntry/: ToolKitEntry.pro  systemtray.cpp  systemtray.h
src/ToolKitEntry/setting/: SettingConfig.h  SettingWidget.cpp  SettingWidget.h
src/drawer/: drawerwidget.cpp  drawerwidget.h
src/global_setting/: SettingConfig.h
src/icon/: iconwidget.cpp  iconwidget.h  iconwidget.ui
src/main/: main.cpp  widget.cpp  widget.h  widget.ui
src/rss/: rssupdateopml.cpp  rssupdateopml.h  rsswidget.cpp  rsswidget.h  rsswidget.ui
src/script/encoding/: encoding.h  encoding.pri  utf8bom_2_utf8.cpp  utf8bom_2_utf8.pro
src/timerTask/: timertask.cpp  timertask.h  timertask.ui  timertaskctrl.cpp  timertaskctrl.h  timertaskinfo.cpp  timertaskinfo.h
src/tool/: customtabstyle.h  header.h  log.cpp  log.h  wconfig.cpp  wconfig.h  wtool.cpp  wtool.h
src/topTip/: toptip.cpp  toptip.h
src/utils/: utils.pri  wtool.cpp  wtool.h
src/watermark/: watermark.cpp  watermark.h
src/x11opacity/: opacityWidget.cpp  opacityWidget.h  windowsctrl.cpp  windowsctrl.h
todo/: build-mingw.bat  build-msvc.bat
